[package]
name = "lf-gfx"
version = "0.7.3"
edition = "2021"
license = "MIT"
description = "A collection of utilities that we use."
homepage = "https://github.com/LucentFlux/lf-gfx"
repository = "https://github.com/LucentFlux/lf-gfx"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
wgpu = { version = "0.19" }
winit = { version = "0.29", features = ["serde", "rwh_06"] }

rustc-hash = "1.1"
rand = "0.8"

bytemuck = "1.12"
bytemuck_derive = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
anyhow = "1.0"
flume = "0.11"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "=0.3.69", features = ["Window", "Storage", "Element", "Node", "HtmlDialogElement"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
dirs = "5.0"
dialog = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"