[package]
name = "lf-gfx"
version = "0.8.1"
edition = "2021"
license = "MIT"
description = "A collection of utilities that we use."
homepage = "https://github.com/LucentFlux/lf-gfx"
repository = "https://github.com/LucentFlux/lf-gfx"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
wgpu = { version = "24.0" }
winit = { version = "0.30", features = ["serde", "rwh_06"] }

rustc-hash = "2.1"

bytemuck = {version = "1.12", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "2.0"
anyhow = "1.0"
flume = "0.11"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "^0.3.74", features = ["Window", "Storage", "Element", "Node", "HtmlDialogElement"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"
dirs = "6.0"
dialog = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"